# sangowarteam

./: pyproject.toml
sangowarteam/: battle.py  hero.py  main.py  team.py
tests/: test_hero.py  test_team.py
