[tool.poetry]
name = "sangowarteam"
version = "0.1.0"
description = ""
authors = ["ChinSheng <1897025+chuehnone@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.1"

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
